<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_priority"
            android:layout_alignParentEnd="true"
            android:text="@string/number1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_title"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/text_view_priority"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title0"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_location"
            android:layout_below="@id/text_view_title"
            android:text="@string/location0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_time"
            android:layout_below="@id/text_view_location"
            android:text="@string/title0"
            />



    </RelativeLayout>
</androidx.cardview.widget.CardView>